test/corpus/entity_from_single.sdm
===============================
Entity, With From clause single
===============================

module corpus_test_entity is

  entity Things from Others with name is
    identity id -> ThingId
  end

end

---

(module
  name: (identifier)
  body: (module_body
    (entity_def
      name: (identifier)
      from: (from_definition_clause
        from: (identifier_reference
          (identifier))
        (mixin_with_members
          member: (mixin_member
            member: (identifier))))
      body: (entity_body
        identity: (entity_identity
          identity: (member
            (member_def
              name: (identifier)
              target: (type_reference
                (identifier_reference
                  (identifier))))))))))
