test/corpus/entity_from_wildcard.sdm
=================================
Entity, With From clause wildcard
=================================

module corpus_test_entity is

  entity Things from Others with _ is
    identity id -> ThingId
  end

end

---

(module
  name: (identifier)
  body: (module_body
    (entity_def
      name: (identifier)
      from: (from_definition_clause
        from: (identifier_reference
          (identifier))
        (from_definition_with
          wildcard: (wildcard)))
      body: (entity_body
        identity: (entity_identity
          identity: (member
            (member_def
              name: (identifier)
              target: (type_reference
                (identifier_reference
                  (identifier))))))))))
