test/corpus/entity_with_constraints.sdm
========================
Entity, With Constraints
========================

module Campaign is

  entity Campaign is

    identity a -> CampaignId

    b -> xsd:string is
      assert not_null = "self is not null"
    end

    ref c -> Target is
      assert tagged_with_foo is
        ∀ self (contains(self.tags "foo"))
      end

    end

  end

end

---

(module
   (identifier)
   (module_body
     (definition
       (entity_def
         (identifier)
         (entity_body
           (identity_member
             (identifier)
             (type_reference
               (identifier_reference
                 (identifier))))
           (member_by_value
             (identifier)
             (type_reference
               (identifier_reference
                 (qualified_identifier
                   (identifier)
                   (identifier))))
             (annotation_only_body
               (annotation
                 (constraint
                   (identifier)
                   (informal_constraint
                     (quoted_string))))))
           (member_by_reference
             (identifier)
             (type_reference
               (identifier_reference
                 (identifier)))
             (annotation_only_body
               (annotation
                 (constraint
                  (identifier)
                  (formal_constraint
                    (constraint_sentence
                      (quantified_sentence
                        (universal)
                            (quantifier_binding
                              (reserved_self))
                        (constraint_sentence
                          (simple_sentence
                            (atomic_sentence
                              (term
                                (identifier))
                              (term
                                (function_composition
                                  (reserved_self)
                                  (identifier)))
                              (term
                                (predicate_value
                                  (simple_value
                                    (string
                                      (quoted_string))))))))))))))))))))
