test/corpus/entity_with_diff_members.sdm
==============================
Entity, With Different Members
==============================

module Campaign is

  entity Campaign is

    identity a -> CampaignId

    b -> xsd:string

    c -> {0..1} Target

  end

end

---

(module
  name: (identifier)
  body: (module_body
    (definition
      (entity_def
        name: (identifier)
        body: (entity_body
          identity: (entity_identity
            name: (identifier)
            target: (type_reference
              (identifier_reference
                (identifier))))
          (member
            name: (identifier)
            target: (type_reference
              (identifier_reference
                (qualified_identifier
                  module: (identifier)
                  member: (identifier)))))
          (member
            name: (identifier)
            cardinality: (cardinality_expression
              min: (unsigned)
              range: (cardinality_range
                max: (unsigned)))
            target: (type_reference
              (identifier_reference
                (identifier)))))))))
