test/corpus/enum_from_multiple.sdm
===============================
Enum, With From clause multiple
===============================

module corpus_test_enum is

  enum NameKind from Names with [ Internal Unknown ] of
    External
  end

end

---

(module
  name: (identifier)
  body: (module_body
    (enum_def
      name: (identifier)
      from: (from_definition_clause
        from: (identifier_reference
          (identifier))
        (from_definition_with
          member: (identifier)
          member: (identifier)))
      body: (enum_body
        (value_variant
          name: (identifier))))))
