test/corpus/enum_from_single.sdm
=============================
Enum, With From clause single
=============================

module corpus_test_enum is

  enum NameKind from Names with Internal of
    External
  end

end

---

(module
  name: (identifier)
  body: (module_body
    (definition
      (enum_def
        name: (identifier)
        from: (from_definition_clause
          from: (identifier_reference
            (identifier))
          (from_definition_with
            member: (identifier)))
        body: (enum_body
          (value_variant
            name: (identifier)))))))
