test/corpus/enum_from_wildcard.sdm
===============================
Enum, With From clause wildcard
===============================

module corpus_test_enum is

  enum NameKind from Names with _ of
    External
  end

end

---

(module
  name: (identifier)
  body: (module_body
    (enum_def
      name: (identifier)
      from: (from_definition_clause
        from: (identifier_reference
          (identifier))
        (mixin_with_members
          wildcard: (wildcard)))
      body: (enum_body
        (value_variant
          name: (identifier))))))
