test/corpus/enum_pattern_numbered_variants.sdm
===================
Enum, With Variants
===================

module corpus_test_enum is

  import [ owl rdf ]

  enum NameKind of

    @owl:equivalentClass = unsigned

    Internal is
      @rdf:value = 1
    end

    External is
      @rdf:value = 2
    end

  end

end

---

(module
  (identifier)
  (module_body
    (import_statement
      (module_import
        (identifier))
      (module_import
        (identifier)))
    (enum_def
      (identifier)
      (enum_body
        (annotation
          (annotation_property
            (identifier_reference
              (qualified_identifier
                (identifier)
                (identifier)))
            (value
              (identifier_reference
                (identifier)))))
        (value_variant
          (identifier)
          (annotation_only_body
            (annotation
              (annotation_property
                (identifier_reference
                  (qualified_identifier
                    (identifier)
                    (identifier)))
                (value
                  (simple_value
                    (integer)))))))
        (value_variant
          (identifier)
          (annotation_only_body
            (annotation
              (annotation_property
                (identifier_reference
                  (qualified_identifier
                    (identifier)
                    (identifier)))
                (value
                  (simple_value
                    (integer)))))))))))
