test/corpus/event_from_multiple.sdm
================================
Event, With From clause multiple
================================

module corpus_test_event is

  event NameChanged from Others with [ name address ] is
    source Campaign
  end

end

---

(module
  name: (identifier)
  body: (module_body
    (event_def
      name: (identifier)
      from: (from_definition_clause
        from: (identifier_reference
          (identifier))
        (from_definition_with
          member: (identifier)
          member: (identifier)))
      body: (event_body
        identity: (source_entity
          entity: (identifier_reference
            (identifier)))))))
