test/corpus/event_from_single.sdm
==============================
Event, With From clause single
==============================

module corpus_test_event is

  event NameChanged from Others with name is
    source Campaign
  end

end

---

(module
  name: (identifier)
  body: (module_body
    (definition
      (event_def
        name: (identifier)
        from: (from_definition_clause
          from: (identifier_reference
            (identifier))
          (from_definition_with
            member: (identifier)))
        body: (event_body
          identity: (source_entity
            entity: (identifier_reference
              (identifier))))))))
