test/corpus/event_from_wildcard.sdm
================================
Event, With From clause wildcard
================================

module corpus_test_event is

  event NameChanged from Others with _ is
    source Campaign
  end

end

---

(module
  name: (identifier)
  body: (module_body
    (event_def
      name: (identifier)
      from: (from_definition_clause
        from: (identifier_reference
          (identifier))
        (from_definition_with
          wildcard: (wildcard)))
      body: (event_body
        identity: (source_entity
          entity: (identifier_reference
            (identifier)))))))
