test/corpus/event_with_members.sdm
===================
Event, With Members
===================

module corpus_test_event is

  event NameChanged is
    source Campaign
    old_name -> string
    new_name -> string
  end

end

---

(module
  name: (identifier)
  body: (module_body
    (event_def
      name: (identifier)
      body: (event_body
        identity: (source_entity
          entity: (identifier_reference
            (identifier)))
        (member
          (member_def
            name: (identifier)
            target: (type_reference
              (builtin_types))))
        (member
          (member_def
            name: (identifier)
            target: (type_reference
              (builtin_types))))))))
