test/corpus/from_definition_multiple_names.sdm
====================================
From Definition, with multiple names
====================================

module corpus_test_from_definition is

  structure Example from Source with [ name description ]

end

---

(module
  name: (identifier)
  body: (module_body
    (structure_def
      name: (identifier)
      from: (from_definition_clause
        from: (identifier_reference
          (identifier))
        (from_definition_with
          member: (identifier)
          member: (identifier))))))
