test/corpus/from_definition_without_multiple_names.sdm
=======================================
From Definition, without multiple names
=======================================

module corpus_test_from_definition is

  structure Example from Source without [ name description ]

end

---

(module
  name: (identifier)
  body: (module_body
    (structure_def
      name: (identifier)
      from: (from_definition_clause
        from: (identifier_reference
          (identifier))
        (mixin_without_members
          member: (mixin_member
            member: (identifier))
          member: (mixin_member
            member: (identifier)))))))
