test/corpus/import_member_from.sdm
=========================
Import single member from
=========================

module corpus_test_import is

  from :: import xsd:base
  from xsd import facets:minLength
  from ::xsd import facets:minLength

end

---

(module
  (identifier)
  (module_body
    (import_statement
      (from_clause
        (module_path_absolute))
      (member_import
        (qualified_identifier
          (identifier)
          (identifier))))
    (import_statement
      (from_clause
        (module_path_relative
          (identifier)))
      (member_import
        (qualified_identifier
          (identifier)
          (identifier))))
    (import_statement
      (from_clause
        (module_path_absolute
          (identifier)))
      (member_import
        (qualified_identifier
          (identifier)
          (identifier))))))
