test/corpus/import_multiple_from.sdm
============================
Import multiple members from
============================

module corpus_test_import is

  from :: import xsd:base
  from xsd import facets
  from ::reporting::common import [
    datatypes
    enums
  ]

end

---

(module
  (identifier)
  (module_body
    (import_statement
      (import_from_clause
        (module_path_absolute))
      (single_import
        (member_import
          (qualified_identifier
            (identifier)
            (identifier)))))
    (import_statement
      (import_from_clause
        (module_path_relative
          (identifier)))
      (single_import
        (module_import
          (identifier))))
    (import_statement
      (import_from_clause
        (module_path_absolute
          (module_path_relative
            (identifier)
            (identifier))))
      (single_import
        (module_import
          (identifier)))
      (single_import
        (module_import
          (identifier))))))
