test/corpus/import_multiple_module_version.sdm
================================
Import multiple versioned module
================================

module corpus_test_import is

  import [
    sdml
    customer <https://example.org/v2/Customer#>
    rdf skos
  ]

end

---

(module
  name: (identifier)
  body: (module_body
    (import_statement
      (single_import
        (module_import
          name: (identifier)))
      (single_import
        (module_import
          name: (identifier)
          version_uri: (iri)))
      (single_import
        (module_import
          name: (identifier)))
      (single_import
        (module_import
          name: (identifier))))))
