test/corpus/rdf_definitions.sdm
======================
RDF Custom Definitions
======================

module rdfs <http://www.w3.org/2000/01/rdf-schema#> is

  import [ owl rdf ]

  rdf Resource is
    @isDefinedBy = rdfs
    @label = "Resource"@en
    @comment = "The class resource, everything."
  end

  rdf subClassOf type rdf:Property is
    @domain = Class
    @range = Class
    @isDefinedBy = rdfs
    @label = "subClassOf"
    @comment = "The subject is a subclass of a class."
  end

  rdf comment  type [ rdf:Property owl:AnnotationProperty ] is
    @domain = Resource
    @range = Literal
    @isDefinedBy = rdfs
    @label = "comment"
    @comment = "A description of the subject resource."
  end

end

---

(module
   (identifier)
   (iri)
   (module_body
     (import_statement
       (module_import
         (identifier))
       (module_import
         (identifier)))
     (definition
       (rdf_def
         (identifier)
         (annotation_only_body
           (annotation
             (annotation_property
               (identifier_reference
                 (identifier))
               (value
                 (identifier_reference
                   (identifier)))))
           (annotation
             (annotation_property
               (identifier_reference
                 (identifier))
               (value
                 (simple_value
                   (string
                     (quoted_string)
                     (language_tag))))))
           (annotation
             (annotation_property
               (identifier_reference
                 (identifier))
               (value
                 (simple_value
                   (string
                     (quoted_string)))))))))
     (definition
       (rdf_def
         (identifier)
         (rdf_types
           (identifier_reference
             (qualified_identifier
               (identifier)
               (identifier))))
         (annotation_only_body
           (annotation
             (annotation_property
               (identifier_reference
                 (identifier))
               (value
                 (identifier_reference
                   (identifier)))))
           (annotation
             (annotation_property
               (identifier_reference
                 (identifier))
               (value
                 (identifier_reference
                   (identifier)))))
           (annotation
             (annotation_property
               (identifier_reference
                 (identifier))
               (value
                 (identifier_reference
                   (identifier)))))
           (annotation
             (annotation_property
               (identifier_reference
                 (identifier))
               (value
                 (simple_value
                   (string
                     (quoted_string))))))
           (annotation
             (annotation_property
               (identifier_reference
                 (identifier))
               (value
                 (simple_value
                   (string
                     (quoted_string)))))))))
     (definition
       (rdf_def
         (identifier)
         (rdf_types
           (identifier_reference
             (qualified_identifier
               (identifier)
               (identifier)))
           (identifier_reference
             (qualified_identifier
               (identifier)
               (identifier))))
         (annotation_only_body
           (annotation
             (annotation_property
               (identifier_reference
                 (identifier))
               (value
                 (identifier_reference
                   (identifier)))))
           (annotation
             (annotation_property
               (identifier_reference
                 (identifier))
               (value
                 (identifier_reference
                   (identifier)))))
           (annotation
             (annotation_property
               (identifier_reference
                 (identifier))
               (value
                 (identifier_reference
                   (identifier)))))
           (annotation
             (annotation_property
               (identifier_reference
                 (identifier))
               (value
                 (simple_value
                   (string
                     (quoted_string))))))
           (annotation
             (annotation_property
               (identifier_reference
                 (identifier))
               (value
                 (simple_value
                   (string
                     (quoted_string)))))))))))
