test/corpus/structure_from_multiple.sdm
====================================
Structure, With From clause multiple
====================================

module corpus_test_structure is

  structure Things from Others with [ name address ] is
    description -> string
  end

end

---

(module
  name: (identifier)
  body: (module_body
    (structure_def
      name: (identifier)
      from: (from_definition_clause
        from: (identifier_reference
          (identifier))
        (mixin_with_members
          member: (mixin_member
            member: (identifier))
          member: (mixin_member
            member: (identifier))))
      body: (structure_body
        (member
          (member_def
            name: (identifier)
            target: (type_reference
              (builtin_types))))))))
