test/corpus/structure_from_single.sdm
==================================
Structure, With From clause single
==================================

module corpus_test_structure is

  structure Things is
    from Others with name
  end

end

---

(module
  name: (identifier)
  body: (module_body
    (definition
      (structure_def
        name: (identifier)
        body: (structure_body
          from: (from_definition_clause
            from: (identifier_reference
              (identifier))
            member: (identifier)))))))
