test/corpus/structure_from_wildcard.sdm
====================================
Structure, With From clause wildcard
====================================

module corpus_test_structure is

  structure Things from Others with _ is
    description -> string
  end

end

---

(module
  name: (identifier)
  body: (module_body
    (structure_def
      name: (identifier)
      from: (from_definition_clause
        mixin: (mixin_clause
          from: (identifier_reference
            (identifier))
          (mixin_with_members
            wildcard: (wildcard))))
      body: (structure_body
        (member
          (member_def
            name: (identifier)
            target: (type_reference
              (builtin_types))))))))
