test/corpus/type_class_from_multiple.sdm
=====================================
Type Class, With From clause multiple
=====================================

module corpus_test_typeclass is

  class Things from Others with [ name address ] is end

end

---

(module
  name: (identifier)
  body: (module_body
    (type_class_def
      name: (identifier)
      from: (from_definition_clause
        from: (identifier_reference
          (identifier))
        (from_definition_with
          member: (identifier)
          member: (identifier)))
      body: (type_class_body))))
